better swagger coverage
